# BetterAIM

./: .gitignore  README.md  README_REACT.md  pyproject.toml  react_requirements.txt
better_aim/: __init__.py  adjustable_session_service.py  agent.py  host.py  main.py  tool_modify_guardrail.py  utils.py
example/DeePTB-agent/: agent.json  api.py  cli.sh  react_api.py
example/other/: api.py
examples/DeePTB-agent/: agent.json  api.py
frontend/: .env.local  package.json
frontend/src/: App.tsx
frontend/src/components/Chat/: index.tsx
frontend/src/components/FilePanel/: index.tsx
frontend/src/components/ParamPanel/: index.tsx
frontend/src/components/SessionPanel/: index.tsx
frontend/src/contexts/: AppContext.tsx
frontend/src/services/: api.ts
